--- a/alumni-client/src/App.css
+++ b/alumni-client/src/App.css
@@ -2,5 +2,6 @@
 
 
 *{
-  font-family: "Raleway", sans-serif;
+  /* font-family: "Raleway", sans-serif; */
+  font-family: 'Poppins', sans-serif;
 }
