--- a/alumni-client/src/App.css
+++ b/alumni-client/src/App.css
@@ -5,3 +5,7 @@
   /* font-family: "Raleway", sans-serif; */
   font-family: 'Poppins', sans-serif;
 }
+
+:root{
+  background-color: #f5f5f5 !important;
+}
